Add sass loader

--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,11 @@
     <title>Webpack</title>
 </head>
 <body>
-    <h1>Webpack</h1>
+    <div class="title">
+        <h1>Webpack</h1>
+    </div>
+    <div class="desc">
+        <h2>Hello webpack</h2>
+    </div>
 </body>
 </html>
